--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "eslint-plugin-prettier": "^5.1.3",
     "prettier": "^3.3.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.24.7"
+  },
   "description": ""
 }
